# metrics_server

./: Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.github/workflows/: ci.yml
examples/: prometheus.rs
src/: error.rs  errors.rs  lib.rs  server.rs
tests/: server.rs
tests/certs/: certificate.pem  private_key.pem
