[package]
name = "metrics_server"
version = "0.4.1"
authors = ["Dan Bond <danbond@protonmail.com>"]
edition = "2021"
rust-version = "1.58"
description = "A single responsibility HTTP metrics server."
documentation = "https://docs.rs/metrics_server"
readme = "README.md"
homepage = "https://github.com/loshz/metrics_server"
repository = "https://github.com/loshz/metrics_server"
license = "MIT"
keywords = ["http", "prometheus", "metrics"]
categories = ["web-programming::http-server"]
include = ["src/**/*", "tests", "examples", "LICENSE", "README.md"]

[dependencies]
tiny_http = { version = "0.11", features = ["ssl-rustls"] }
log = "0.4"

[dev-dependencies]
prometheus-client = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
