[package]
name = "metrics_server"
version = "0.10.0"
authors = ["Dan Bond <danbond@protonmail.com>"]
edition = "2021"
rust-version = "1.58"
description = "A hassle-free, single-responsibility, safe HTTP/S server used to easily expose metrics in an application."
documentation = "https://docs.rs/metrics_server"
readme = "README.md"
homepage = "https://github.com/loshz/metrics_server"
repository = "https://github.com/loshz/metrics_server"
license = "MIT"
keywords = ["http", "server", "metrics"]
categories = ["web-programming::http-server"]
include = ["src/**/*", "tests", "examples", "Cargo.toml", "LICENSE", "README.md"]

[lib]
doctest = false

[dependencies]
log = "0.4"
tiny_http = "0.11"

[dev-dependencies]
ctrlc = { version = "3.2", features = ["termination"] }
prometheus-client = "0.18"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = []
tls = ["tiny_http/ssl-rustls"]
