[package]
name = "metrics_server"
version = "0.15.0"
authors = ["Dan Bond <danbond@protonmail.com>"]
edition = "2021"
rust-version = "1.63"
description = "A hassle-free, single-responsibility, safe HTTP/S server used to easily expose metrics in an application."
documentation = "https://docs.rs/metrics_server"
readme = "README.md"
homepage = "https://github.com/loshz/metrics_server"
repository = "https://github.com/loshz/metrics_server"
license = "MIT"
keywords = ["http", "server", "metrics"]
categories = ["web-programming::http-server"]
include = ["src/**/*", "tests", "examples", "Cargo.toml", "LICENSE", "README.md"]

[lib]
doctest = false

[dependencies]
http = "1.1"
log = "0.4"
tiny_http = "0.12"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
ctrlc = { version = "3.4", features = ["termination"] }
env_logger = "0.11"
prometheus-client = "0.22"
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = []
tls = ["tiny_http/ssl-rustls"]
